tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_character_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo = (c: Character): Integer =>
  switch(c) {
    case 'h': 0
    case 'i': 1
    case 'i': 1
    case _: 2
  }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_character_1.kk:5:10
  │
5 │     case 'i': 1
  │          ^^^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.
